--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+
+    <button id="play-button">Play</button>
+    <div id="grid"></div>
+
     
 
 
