--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 </head>
 <body>
 
-    <button id="play-button">Play</button>
-    <div id="grid"></div>
+    <section class="container">
+        <div>
+            <button id="play-button">Play</button>
+        </div>
+        <div id="grid"></div>
+    </section>
 
     
 
