--- a/index.html
+++ b/index.html
@@ -4,21 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
+    <title>Campo minato</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <section class="container">
-        <div>
-            <button id="play-button">Play</button>
-        </div>
-        <div id="grid"></div>
-    </section>
-
     
 
-
-    <script src="./app.js"></script>
-</body>
+    <h1>Campo Minato</h1>
+  <button id="play">Play</button>
+  <div id="grid"></div>
+  
+  
+  
+  <script src="app.js"></script>
+  </body>
 </html>
